--- a/src/css/App.css
+++ b/src/css/App.css
@@ -94,6 +94,16 @@ ul {
   padding: 5px;
   color: white;
   background-color: #0077b6;
+  border: 1px solid red;
+  font-size: medium;
+}
+
+.game-info ol {
+  font-size: medium;
+  list-style: none;
+}
+.game-info ol li {
+  margin: 5px;
 }
 
 .app {
